; Main entry point of the arbolib library.
; Arbolib is split in 6 sub-libraries (see below)
(library
 (name arbolib)
 (public_name arbogen)
 (libraries grammar randtools tree frontend boltzmann oracles)
 (modules))

; ** Grammar **
; Low-level efficient grammar reprensentation
(library
 (name grammar)
 (public_name arbogen.grammar)
 (libraries frontend)
 (modules Grammar))

; ** Randtools **
; Some PRNGs + probability distributions built on top of them
; (see the `randtools` folder)

; ** Tree **
; A generic tree datastructure
(library
 (name tree)
 (public_name arbogen.tree)
 (modules Tree))

; ** Frontend **
; Parsing and high level grammar construction
; (see the `frontend` folder)

; ** Boltzmann **
; Boltzmann uniform random generation
; (see the `boltzmann` folder)

; ** Oracles **
; Various oracle implementations
; (see the `oracles` folder)
