; Main entry point of the arbolib library.
; Arbolib is split in 8 sub-libraries (see below)
(library
 (name arbolib)
 (public_name arbogen)
 (libraries grammar randtools tree frontend boltzmann oracles counting recursive_method)
 (modules))

; ** Grammar **
; Low-level efficient grammar reprensentation
(library
 (name grammar)
 (public_name arbogen.grammar)
 (modules Grammar))

; ** Randtools **
; Some PRNGs + probability distributions built on top of them
; (see the `randtools` folder)

; ** Tree **
; A generic tree datastructure
(library
 (name tree)
 (public_name arbogen.tree)
 (modules Tree))

; ** Frontend **
; Parsing and high level grammar construction
; (see the `frontend` folder)

; ** Boltzmann **
; Boltzmann uniform random generation
; (see the `boltzmann` folder)

; ** Oracles **
; Various oracle implementations
; (see the `oracles` folder)

; ** Counting **
(library
 (name counting)
 (public_name arbogen.counting)
 (libraries grammar)
 (modules Counting))

; ** Exact-size generation **
(library
 (name recursive_method)
 (public_name arbogen.recursive_method)
 (libraries grammar counting)
 (modules RecursiveMethod))
